# planning-2025-t2

./: .gitignore  README.md  pyproject.toml
PS/PS1-discrete/: data_ps1.npz  utils.py
PS/PS3-MDP/: data_ps3.npz  mdp.py  run.py  utils.py  vi.py
seminars/S1-distances/: seminar-1-distances.ipynb
seminars/S2-sampling/: seminar-2-sampling.ipynb
