[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "planning-course-2025"
version = "0.1.0"
description = "Planning course assignments."
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "opencv-python",
    "ffmpeg-python",
    "notebook",
    "jupyterlab",
    "ipykernel",
    "ipywidgets",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["PS*"]
